<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijing2"
    tools:context=".FindPasswordActivity" >
	
    <!-- 自定义的actionBar -->
    <RelativeLayout
        android:id="@+id/reg_action_bar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#339999"
        >
        <TextView 
            android:id="@+id/find_back"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="返回"/>
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:text="找回密码"/>
        
        <TextView 
            android:id="@+id/find_next_step"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/complete"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/str_log_userNmae"
            android:textColor="#339999"
            android:textSize="@dimen/find_textsize" />

        <EditText
            android:id="@+id/userName_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:hint="@string/str_log_userNameHint"
            android:textSize="@dimen/find_edittext_size" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/secret_question"
            android:textColor="#339999"
            android:textSize="@dimen/find_textsize" />

        <Spinner
            android:id="@+id/secret_question_find"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/secret_answer"
            android:textColor="#339999"
            android:textSize="@dimen/find_textsize" />

        <EditText
            android:id="@+id/secret_answer_find"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:hint="@string/secret_answer"
            android:scrollHorizontally="true" />
    </LinearLayout>

</RelativeLayout>
