<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/beijing2"
    tools:context=".SecretQuestionActivity" >

    <!-- 自定义的actionBar -->

    <RelativeLayout
        android:id="@+id/reg_action_bar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#339999" >

        <TextView
            android:id="@+id/secret_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="返回"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="设置密保"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/secret_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/complete"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/secret_question"
            android:textColor="#339999"
            android:textSize="15sp" />

        <Spinner 
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/secret_question"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/secret_answer"
            android:textColor="#339999"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/secret_answer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secret_answer"
             />
    </LinearLayout>

</RelativeLayout>